--- a/Algoritimo/Aula2/package.json
+++ b/Algoritimo/Aula2/package.json
@@ -4,7 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "exercicio1": "node ./src/exercicio1",
+    "exercicio2": "node ./src/exercicio2",
+    "exercicio3": "node ./src/exercicio3",
+    "exercicio4": "node ./src/exercicio4",
+    "exercicio5": "node ./src/exercicio5",
+    "exercicio6": "node ./src/exercicio6",
+    "exercicio7": "node ./src/exercicio7",
+    "exercicio8": "node ./src/exercicio8",
+    "exercicio9": "node ./src/exercicio9",
+    "exercicio10": "node ./src/exercicio10"
   },
   "keywords": [],
   "author": "",
